[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/8 pic animation/8_frames_coin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Coin.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Firework.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 36.0
height = 2.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("coin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("firework:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "coin"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("coin:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "firework"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("firework:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 6, 9, 12, 15, 18, 21, 24 ]
}

[node name="Coin" type="Area2D"]
script = ExtResource( 2 )

[node name="coin" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "coin"
anims/RESET = SubResource( 2 )
anims/coin = SubResource( 3 )
anims/firework = SubResource( 4 )

[node name="firework" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 6
vframes = 5

[connection signal="area_entered" from="." to="." method="_on_Coin_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Coin_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
